overflow bug

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,10 +1,11 @@
 .modal{
   position: fixed;
   display: flex;
+  overflow: hidden;
   align-items: center;
   justify-content: center;
   inset: 0;
-  background: rgba(0,0,0,.8);
+  background: #000000cc;
   opacity: 0;
   pointer-events: none;
   transition: opacity .3;
@@ -13,6 +14,7 @@
 }
 .modal--active{
   opacity: 1;
+  z-index: 2;
   pointer-events: auto;
   transition: opacity .3s;
   --transform: scale(1);
